# ariadne-codegen

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE.md  LICENSE  PLUGINS.md  README.md  cliff.toml  context7.json  justfile  pyproject.toml
.github/workflows/: build.yml  prepare_release.yml  publish.yml  test.yml  tests.yml
ariadne_codegen/: __init__.py  __main__.py  codegen.py  config.py  exceptions.py  main.py  module_importer.py  schema.py  settings.py  utils.py
ariadne_codegen/client_generators/: arguments.py  client.py  comments.py  constants.py  custom_arguments.py  custom_fields.py  custom_fields_typing.py  custom_generator_utils.py  custom_operation.py  enums.py  fragments.py  init_file.py  input_fields.py  input_types.py  package.py  result_fields.py  result_types.py  scalars.py  utils.py
ariadne_codegen/client_generators/dependencies/: async_base_client.py  async_base_client_no_upload.py  async_base_client_open_telemetry.py  async_base_client_open_telemetry_no_upload.py  async_base_client_with_telemetry.py  base_client.py  base_client_no_upload.py  base_client_open_telemetry.py  base_client_open_telemetry_no_upload.py  base_client_with_telemetry.py  base_model.py  base_model_no_upload.py  base_operation.py
ariadne_codegen/contrib/: __init__.py  client_forward_refs.py  extract_operations.py  no_global_imports.py  no_reimports.py  operations.py  shorter_results.py
ariadne_codegen/generators/: arguments.py  client.py  codegen.py  constants.py  enums.py  init_file.py  input_fields.py  input_types.py  package.py  result_fields.py  result_types.py  scalars.py  utils.py
ariadne_codegen/generators/dependencies/: async_base_client.py  base_client.py  base_model.py  exceptions.py  scalars.py
ariadne_codegen/graphql_schema_generators/: constants.py  directives.py  fields.py  named_types.py  schema.py  utils.py
ariadne_codegen/plugins/: base.py  explorer.py  manager.py  shorter_results.py
ariadne_codegen/plugins/contrib/: shorter_results.py
docs/: 01-index.md  01-intro.md  01-introduction.md  02-configuration.md  03-using-generated-client.md  04-step-by-step-example.md  05-custom-operation-builder.md  07-improving-import-performance.md  08-fragments-and-forward-references.md
docs/02-guides/: 01-step-by-step-example.md  02-schema-sources.md  03-using-generated-client.md  04-subscriptions.md  05-file-uploads.md  06-custom-scalars.md  07-extending-types.md  08-multiple-clients.md  09-opentelemetry.md  10-async-vs-sync.md  11-schema-generation.md  12-custom-operation-builder.md  13-improving-import-performance.md  _category_.yml
docs/03-reference/: 01-configuration.md  02-generated-code-dependencies.md  _category_.yml
docs/04-plugins/: 03-hooks.md  04-standard-plugins.md
docs/05-community/: 01-contributing.md  02-versioning-policy.md  _category_.yml
docs/06-plugins/: 01-intro.md  01-standard-plugins.md  02-custom-plugins.md  03-hooks.md  04-standard-plugins.md  _category_.yml
graphql_sdk_gen/: config.py  exceptions.py  main.py  schema.py
graphql_sdk_gen/generator/: client.py  init_file.py  utils.py
graphql_sdk_gen/generators/: arguments.py  async_base_client.py  base_client.py  base_types.py  client.py  codegen.py  constants.py  fields.py  init_file.py  input_fields.py  input_types.py  package.py  query_types.py  result_fields.py  result_types.py  schema_types.py  types.py  utils.py
graphql_sdk_gen/generators/dependencies/: async_base_client.py  base_client.py  exceptions.py
tests/: conftest.py  test_config.py  test_custom_generator_utils.py  test_main.py  test_module_importer.py  test_schema.py  test_settings.py  test_utils.py  utils.py
tests/client_generators/: conftest.py  test_arguments_generator.py  test_client_generator.py  test_comments.py  test_custom_arguments.py  test_custom_operation_generator.py  test_deprecation_warnings.py  test_enums_generator.py  test_fragments_generator.py  test_init_file_generator.py  test_input_fields.py  test_package_generator.py  test_result_fields.py  test_scalars.py
tests/client_generators/dependencies/: conftest.py  test_async_base_client.py  test_async_base_client_open_telemetry.py  test_async_base_client_with_telemetry.py  test_base_client.py  test_base_client_open_telemetry.py  test_base_client_with_telemetry.py  test_base_model.py  test_base_operation.py  test_exceptions.py  test_websockets.py  test_websockets_open_telemetry.py  test_websockets_with_telemetry.py
tests/client_generators/input_types_generator/: test_default_values.py  test_filtering_names.py  test_imports.py  test_method_calls.py  test_names.py  test_parsing_inputs.py  test_plugin_hooks.py
tests/client_generators/package_generator/: conftest.py  test_generated_files.py  test_plugin_hooks.py  (+1 more)
tests/codegen/: test_generate_method_definition.py  test_generated_assignments.py  test_generated_calls.py  test_generated_classes.py  test_generated_constants.py  test_generated_dictionaries.py  test_generated_imports.py  test_generated_lists.py  test_generated_methods.py  test_generated_names.py  test_generated_unions.py  test_nullable.py  test_parsing_field_types.py
tests/contrib/: test_client_forward_refs.py  test_extract_operations.py  test_no_reimports.py  test_operations.py  test_shorter_results.py
tests/generators/: test_arguments_generator.py  test_async_base_client.py  test_base_client.py  test_client_generator.py  test_codegen.py  test_enums_generator.py  test_fields.py  test_init_file_generator.py  test_input_fields.py  test_package_generator.py  test_query_types_generator.py  test_result_fields.py  test_result_types_generator.py  test_scalars.py  test_schema_types_generator.py  test_utils.py
tests/graphql_schema_generators/: test_directives.py  test_fields.py  test_named_types.py  test_schema.py  test_utils.py
tests/main/: test_generated_client.py  test_main.py  test_model_rebuild_validation.py
tests/performance/: helpers.py  test_codegen_performance.py  test_defer_model_build_performance.py  test_import_performance.py
tests/plugins/: test_explorer.py  test_manager.py  test_shorter_results.py
(+456 files in other folders)
