[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-codegen"
description = "Generate fully typed GraphQL client from schema, queries and mutations!"
authors = [{ name = "Mirumee Software", email = "hello@mirumee.com" }]
version = "0.14.0.dev1"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click~=8.1",
  "graphql-core>=3.2.0,<3.3",
  "toml~=0.10",
  "httpx~=0.23",
  "pydantic>=2.0.0,<3.0.0",
  "black",
  "isort",
  "autoflake",
]

[project.optional-dependencies]
dev = [
  "ariadne",
  "pytest",
  "pylint",
  "mypy",
  "types-toml",
  "pytest-mock",
  "pytest-asyncio",
  "pytest-httpx",
  "freezegun",
  "requests-toolbelt",
]
subscriptions = ["websockets~=11.0"]
opentelemetry = ["opentelemetry-api"]

[project.scripts]
ariadne-codegen = "ariadne_codegen.main:main"

[project.urls]
"Homepage" = "https://ariadnegraphql.org/"
"Repository" = "https://github.com/mirumee/ariadne-codegen"
"Bug Tracker" = "https://github.com/mirumee/ariadne-codegen/issues"
"Community" = "https://github.com/mirumee/ariadne/discussions"
"Twitter" = "https://twitter.com/AriadneGraphQL"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "redefined-outer-name",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-arguments",
  "duplicate-code",
  "no-name-in-module",
  "too-many-locals",
  "too-many-lines",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.hatch.build]
include = ["ariadne_codegen/**/*.py", "ariadne_codegen/py.typed"]
exclude = ["tests"]
